{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 172,
  "lineage": "629c54cc-4bc9-67b9-6a05-e48cb6f20093",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "public_subnet_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:internet-gateway/igw-03b810dfe22ed14a6",
            "id": "igw-03b810dfe22ed14a6",
            "owner_id": "498484133733",
            "tags": {
              "Name": "public_subnet_ig"
            },
            "tags_all": {
              "Name": "public_subnet_ig"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "web_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:loadbalancer/app/web-app-load-balancer/0be78244b363d356",
            "arn_suffix": "app/web-app-load-balancer/0be78244b363d356",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "web-app-load-balancer-898060247.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:loadbalancer/app/web-app-load-balancer/0be78244b363d356",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "web-app-load-balancer",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0c3ba293024bbbe53"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0025c4c3ad78fe100"
              },
              {
                "subnet_id": "subnet-0efdba8ceaa7d25fa"
              }
            ],
            "subnets": [
              "subnet-0025c4c3ad78fe100",
              "subnet-0efdba8ceaa7d25fa"
            ],
            "tags": {
              "Name": "web_app_load_balancer"
            },
            "tags_all": {
              "Name": "web_app_load_balancer"
            },
            "vpc_id": "vpc-03825e7566dc01ae7",
            "xff_header_processing_mode": "append",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "aws_security_group.external_lb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:listener/app/web-app-load-balancer/0be78244b363d356/abd5a38081559277",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:targetgroup/web-app-tg/d7419252fda64c4a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:listener/app/web-app-load-balancer/0be78244b363d356/abd5a38081559277",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:loadbalancer/app/web-app-load-balancer/0be78244b363d356",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.web_load_balancer",
            "aws_lb_target_group.web_app_tg",
            "aws_security_group.external_lb_sg",
            "aws_subnet.public_subnet",
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:targetgroup/web-app-tg/d7419252fda64c4a",
            "arn_suffix": "targetgroup/web-app-tg/d7419252fda64c4a",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:498484133733:targetgroup/web-app-tg/d7419252fda64c4a",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-south-1:498484133733:loadbalancer/app/web-app-load-balancer/0be78244b363d356"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "web-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "web_app_tg"
            },
            "tags_all": {
              "Name": "web_app_tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03b810dfe22ed14a6",
            "id": "r-rtb-0f3363b06d0780dc01080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f3363b06d0780dc0",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.public_subnet_ig",
            "aws_route_table.public_subnet_rt",
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:route-table/rtb-0f3363b06d0780dc0",
            "id": "rtb-0f3363b06d0780dc0",
            "owner_id": "498484133733",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03b810dfe22ed14a6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_subnet_rt"
            },
            "tags_all": {
              "Name": "public_subnet_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_sub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09b255ca3223e8ba4",
            "route_table_id": "rtb-0f3363b06d0780dc0",
            "subnet_id": "subnet-0efdba8ceaa7d25fa"
          },
          "dependencies": [
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04adab64a113b146e",
            "route_table_id": "rtb-0f3363b06d0780dc0",
            "subnet_id": "subnet-0025c4c3ad78fe100"
          },
          "dependencies": [
            "aws_route_table.public_subnet_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext_asg_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:security-group/sg-0b6f95a42b4f452a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b6f95a42b4f452a9",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c3ba293024bbbe53"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250709013806675400000003",
            "name_prefix": "terraform-",
            "owner_id": "498484133733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext_asg"
            },
            "tags_all": {
              "Name": "ext_asg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.external_lb_sg",
            "aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ext_lt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:security-group/sg-0344b52f6941d1673",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0344b52f6941d1673",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0b6f95a42b4f452a9"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250709013811315400000004",
            "name_prefix": "terraform-",
            "owner_id": "498484133733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ext_lt"
            },
            "tags_all": {
              "Name": "ext_lt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.ext_asg_sg",
            "aws_security_group.external_lb_sg",
            "aws_vpc.primary_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "external_lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:security-group/sg-0c3ba293024bbbe53",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c3ba293024bbbe53",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20250709013801402200000002",
            "name_prefix": "terraform-",
            "owner_id": "498484133733",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "external_lb_sg"
            },
            "tags_all": {
              "Name": "external_lb_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.primary_vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "app_subnet_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:subnet/subnet-0d9a40fd6a061c4b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d9a40fd6a061c4b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498484133733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_private_subnet.a"
            },
            "tags_all": {
              "Name": "app_private_subnet.a"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:subnet/subnet-0acb93597ace84f72",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0acb93597ace84f72",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498484133733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "app_private_subnet.b"
            },
            "tags_all": {
              "Name": "app_private_subnet.b"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "db_private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:subnet/subnet-06b78fc465eebbcfb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06b78fc465eebbcfb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498484133733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_private_subnet.a"
            },
            "tags_all": {
              "Name": "db_private_subnet.a"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:subnet/subnet-0dd910bf1f375332f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0dd910bf1f375332f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "498484133733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "db_private_subnet.b"
            },
            "tags_all": {
              "Name": "db_private_subnet.b"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:subnet/subnet-0efdba8ceaa7d25fa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "192.168.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0efdba8ceaa7d25fa",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498484133733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet.a"
            },
            "tags_all": {
              "Name": "public_subnet.a"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:subnet/subnet-0025c4c3ad78fe100",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0025c4c3ad78fe100",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "498484133733",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "public_subnet.b"
            },
            "tags_all": {
              "Name": "public_subnet.b"
            },
            "vpc_id": "vpc-03825e7566dc01ae7"
          },
          "dependencies": [
            "aws_vpc.primary_vpc",
            "data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "primary_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:498484133733:vpc/vpc-03825e7566dc01ae7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-099dab164854a93aa",
            "default_route_table_id": "rtb-022f487544a8fac22",
            "default_security_group_id": "sg-0bc324629f2f7f977",
            "dhcp_options_id": "dopt-0c165ec66b2705ef9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03825e7566dc01ae7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-022f487544a8fac22",
            "owner_id": "498484133733",
            "tags": {
              "Name": " primary_vpc"
            },
            "tags_all": {
              "Name": " primary_vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}